Fix for whilelist-only ores (including Ancient Debris) not being mined by the ore laser (#1307)
* Fixed biome detection in OreLaserBaseTile

* Bumped gradle to 7.5.1 and added Mekanism as a runtime dependency